--- a/styles/components/_nosso-espaco.scss
+++ b/styles/components/_nosso-espaco.scss
@@ -1,5 +1,28 @@
+
 @use "../abstract/mixins";
 
 #nosso-espaco {
   @include mixins.margem-central(80%);
+  .detalhes {
+    width: 100%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 2rem;
+    padding: 2rem 0;
+    
+    .imgs-espaco {
+      max-width: 500px;
+    }
+    
+    .espaco-textos{
+      @extend .imgs-espaco;
+      .titulo{
+        @include mixins.ff-fs-cl()
+      }
+      .separador{
+        width: 100%;
+      }
+    }
+  }
 }
